<resources>
    <string name="app_name">Performance Sandbox</string>

    <!-- Concurrency -->
    <string name="scenario_section_concurrency">Concurrency</string>
    <string name="scenario_coroutines">Coroutines</string>
    <string name="scenario_coroutines_looping">Looping Coroutines</string>
    <string name="scenario_coroutines_leaky">Leaky Coroutines</string>
    <string name="scenario_threadpool">Thread Pool</string>
    <string name="scenario_threadpool_looping">Looping Thread Pool</string>
    <string name="scenario_threadpool_leaky">Leaky Thread Pool</string>
    <string name="scenario_threads">Threads</string>
    <string name="scenario_threads_looping">Looping Threads</string>
    <string name="scenario_threads_leaky">Leaky Threads</string>
    <string name="thread_description_format">Threads execute work then sleep %d milliseconds.</string>
    <string name="thread_description_looping_format">Threads execute work, sleep %d milliseconds, then loop infinitely.</string>
    <string name="coroutine_description_format">Coroutines execute work then delay %d milliseconds.</string>
    <string name="corutine_description_looping_format">Coroutines execute work, delay %d milliseconds, then loop infinitely.</string>
    <string name="threadpool_size_format">Thread Pool Size: %d</string>
    <string name="threads_created_format">Thread Count: %d</string>
    <string name="coroutines_launched_format">Coroutines Launched: %d</string>
    <string name="coroutine_dispatcher_used_format">Dispatcher used: %s</string>

    <!-- Memory -->
    <string name="scenario_section_memory">Memory</string>
    <string name="scenario_memory_leaked_activity">Leaked Activity</string>
    <string name="scenario_memory_object_churn">Object Churn</string>
    <string name="memory_leak_activity_description">A leaked reference to this activity has been added to the application subclass</string>
    <string name="object_churn_activity_description_format">Click the button to create %d new objects. These will replace the previous objects. Continue doing this to trigger garbage collection of unreferenced objects</string>
    <string name="object_churn_activity_button">Create objects</string>
    <string name="object_churn_activity_count_format">%d objects created</string>
    <string name="object_churn_progress_label">GC will cause lag in UI rendering. Look for choppiness in this progress animation:</string>

</resources>